kubernetes/argo-cd/projects/nebius/production-hm/falcosidekick/environments/production/kubernetes-manifests/hm-falcosidekick-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-falcosidekick-ingress
  namespace: production-hm-falcosidekick
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/docs/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: falcosidekick.hongbomiao.com
  labels:
    app.kubernetes.io/name: falcosidekick
    app.kubernetes.io/part-of: production-hm-falcosidekick
spec:
  rules:
    - host: falcosidekick.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: falcosidekick-ui
                port:
                  number: 2802
  tls:
    - hosts:
        - falcosidekick.hongbomiao.com
      secretName: hm-falcosidekick-certificate
